--- a/terraform-mwaa-eks-execute/dags/kube_config.yaml
+++ b/terraform-mwaa-eks-execute/dags/kube_config.yaml
@@ -26,4 +26,4 @@ users:
       - eks-cluster-terraform-mwaa-amazonq
       - --output
       - json
-      command: /usr/local/airflow/.local/bin/aws
+      command: aws
